--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,5 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Greeting
-          command: echo Hello, world.
-      - run:
-          name: Print the Current Time
-          command: date
+          name: Upload PDF to S3
+          command: aws s3 cp resume.pdf s3://lpan-resume/ --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
